[package]
authors = ["Chris Paige"]
name = "host_discovery"
license = "MIT"
documentation = "https://docs.rs/host_discovery"
description = "A simple Rust crate for host discovery"
version = "2.0.2"
repository = "https://github.com/v0idmatr1x/host_discovery"
edition = "2021"

[dependencies]
raw-cpuid = "11.1.0"
wgpu = "22.1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
